@@ -1,3 +1,9 @@
+2012-06-30 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/ralloc2.cc,
+	  src/z80/gen.c:
+	  Fix stack adjustment after call and omission of frame pointer for --reserve-regs-iy.
+
 2012-06-28 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* sdcc.sln,
